# routes/index.js
@@ -2,6 +2,7 @@ const routes = require('express').Router();
 
 routes.use('/', require('./swagger'));
 routes.use('/customers', require('./customers'));
+routes.use('/orders', require('./orders'));
 routes.use('/auth', require('./auth'));
 
 module.exports = routes;
